Updated from Java 17 to Java 11 for Heroku